Bug 16515 - Did you mean? links don't wrap on smaller screens
This patch tweaks some CSS in the OPAC to give the "Did you mean" block
better layout on smaller screens.

To test, apply the patch and process LESS files. Enable "Did you mean"
plugins for the OPAC in Administration.

Perform a search in the OPAC and confirm that the "Did you mean" block
looks correct. Resize your browser to various widths and confirm that
the block handles all sizes well.


(cherry picked from commit 893ead43f751df78bfdcb23ebb137b7975885ec9)
(cherry picked from commit 505ba12bafb729b624e5ab183f3a5c9015d26084)

--- a/koha-tmpl/opac-tmpl/bootstrap/less/responsive.less
+++ b/koha-tmpl/opac-tmpl/bootstrap/less/responsive.less
@@ -41,6 +41,9 @@
     .input-fluid {
         width : 75%;
     }
+    .searchsuggestion {
+        display: block;
+    }
 }
 /* Override Bootstrap Responsive CSS fixed navbar */
 @media (max-width: 979px) {
@@ -420,6 +423,12 @@
         ul {
             padding: 1em 0 1em 0;
         }
+    }
+    #didyoumean {
+        margin: 0;
+    }
+    .searchsuggestion {
+        white-space: nowrap;
     }
 }
 
